# claude-usage-widget

./: .gitignore  LICENSE  README.md  claude_usage_widget.py  config.example.json  requirements.txt
macos/: build.sh
macos/Resources/: Info.plist
macos/Sources/ClaudeUsage/: AppDelegate.swift  AuthViewController.swift  ClaudeUsageApp.swift  ConfigManager.swift  LoggingService.swift  Models.swift  SVGPath.swift  Theme.swift  UsageService.swift  UsageViewModel.swift
macos/Sources/ClaudeUsage/Views/: ArcView.swift  ModelRowView.swift  PopoverView.swift  SettingsView.swift  UsageSectionView.swift
windows/: claude_usage_widget.py  graph.py  refresh-cookie.ps1  requirements.txt
windows-app/: README.md  package-lock.json  package.json
windows-app/src/: index.html  main.js  styles.css
windows-app/src-tauri/: Cargo.toml  tauri.conf.json
windows-app/src-tauri/capabilities/: default.json
windows-app/src-tauri/icons/: icon.icns
windows-app/src-tauri/src/: auth.rs  config.rs  lib.rs  logging.rs  main.rs  models.rs  process_watcher.rs  theme.rs  tray_icon.rs  usage_service.rs  viewmodel.rs
