[package]
name = "claude-usage"
version = "0.1.0"
description = "Claude.ai usage widget for Windows"
authors = ["Devairen"]
edition = "2021"

[lib]
name = "claude_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"

reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
chrono = { version = "0.4", features = ["serde"] }
tiny-skia = "0.11"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
regex = "1"
thiserror = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
